--- a/public/popup.html
+++ b/public/popup.html
@@ -7,7 +7,7 @@
       name="description"
       content="extension created using create-react-extension"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/iconfinder-128.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
